# chimera-ai-gateway

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  __init__.py  check_catalogue.py  check_discovered.py  check_effective.py  check_groq.py  check_groq_api.py  check_keys.py  check_models.py  check_models_api.py  check_models_src.py  check_multi_slash.py  check_orgs.py  check_providers.py  check_segs.py  debug_groq.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  start.py  virtual_keys.json
.github/workflows/: test.yml
api/: app.py
api/routes/: admin.py  chat.py  debug.py  health.py  metrics.py  models.py  root.py  transparency.py
chimera/: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  README-security.md  README.md  __init__.py  check_ssl.py  docker-compose.security.yml  docker-compose.yml  main.py  router.py  setup-security.sh  start.py  waf_bypass.py
chimera/api/: __init__.py  middleware.py
chimera/core/: config.py
chimera/crypto/: e2ee.py
chimera/providers/: anthropic_client.py  catalogue.py  circuit_breaker.py  rate_limiter.py  router.py
chimera/security/: output_guard.py  prompt_shield.py  ssrf.py  (+2 more)
core/: config.py  logging_setup.py
cost/: tracker.py
crypto/: hmac_seal.py
docs/: API.md  PROVIDERS.md  SECURITY.md
keys/: virtual_keys.py
providers/: anthropic_client.py  auto_models.py  capabilities.py  catalogue.py  router.py  virtual_routes.py
security/: canary.py  content_policy.py  nonce.py  pii.py  ultimate_fuzzer.py  waf.py
tests/: __init__.py  test_security.py
transparency/: log.py
(+17 files in other folders)
