[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chimera-gateway"
version = "8.2.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "httpx[http2]>=0.27.0",
    "python-dotenv>=1.0.0",
    "cryptography>=42.0.0",
    "pyjwt[crypto]>=2.8.0",
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]